# cross-platform-agent

./: Cargo.toml  LICENSE  README.md
docs/: agent-requirements-analysis.md  interface-list.md
src/: config.rs  dialog.rs  error.rs  lib.rs  main.rs  models.rs  path_policy.rs  process_runner.rs  runtime.rs  server.rs
src/actions/: command.rs  git.rs  mod.rs
tests/: agent_flow.rs
