[package]
name = "cross-platform-agent"
version = "0.1.0"
edition = "2024"
description = "Thin cross-platform execution agent with REST and WebSocket APIs."

[dependencies]
axum = { version = "0.8", features = ["http1", "json", "macros", "ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tempfile = "3"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "handshake"] }
